<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NJSensory</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home_tag">home</string>
    <string name="tab_summary_tag">summary</string>
    <string name="tab_history_tag">history</string>
    <string name="tab_home_indicator">Home</string>
    <string name="tab_summary_indicator">Summary</string>
    <string name="tab_history_indicator">History</string>
    <string name="data_collection_label">Data collection:</string>
    <string name="data_collection_on">on</string>
    <string name="data_collection_off">off</string>
    <string name="database_name">extra_sensory_db</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_active_feedback">active feedback</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_label">Label</string>
    <string name="dialog_title">ExtraSensory</string>
    <string name="message_cant_report_zero_labels">Must have Some label.</string>
    <string name="api_upload_zip">upload_sensor_data</string>
    <string name="api_feedback">user_labels</string>
    <string name="REC">REC</string>
    <string name="need_google_play_services_message">ExtraSensory needs you to have Google Play services available in order to use Location services. Please update Google Play services!</string>
    <string name="set_google_play_button">Set Google Play</string>
    <string name="cancel">Cancel</string>
    <string name="need_google_play_services_title">Google Play services required</string>
    <string name="title_activity_selection_from_list"></string>
    <string name="previous_history">Previous</string>
    <string name="next_history">Next</string>
    <string name="button_text">Start Activity</string>
    <string name="currently_storing_text">Currently stored examples:</string>
    <string name="done_selecting_from_list">Done</string>
    <string name="uuid_label">UUID:</string>
    <string name="max_storage_label">Max stored examples:</string>
    <string name="notification_interval">Notification interval:</string>
    <string name="location_bubble_header">Location hidden bubble:</string>
    <string name="location_bubble_on">on</string>
    <string name="location_bubble_off">off</string>
    <string name="latitude_label">latitude:</string>
    <string name="longitude_label">longitude:</string>
    <string name="location_bubble_update_button_label">Update latitude/longitude</string>
    <string name="currently_waiting_feedback_text">Waiting to send feedback:</string>
    <string name="use_secure_communication">Use secure communication:</string>
    <string name="https_on">on</string>
    <string name="https_off">off</string>
    <string name="alert_for_active_feedback_while_data_collection_off">Data collection is off now. Please turn it on before labeling your activity.</string>
    <string name="alert_for_active_feedback_while_Polar_disconnected">Your Polar device is not connected. Please connect to your Polar device before labeling your activity.</string>
    <string name="alert_for_active_feedback_while_recording_ongoing">A recording session is ongoing. Please wait until it is done before starting a new session.</string>
    <string name="alert_if_Polar_disconnected">Your Polar device is not connected. Please connect.</string>
    <string name="ok_button_text">O.K.</string>
    <string name="home_sensing_off">no</string>
    <string name="home_sensing_on">yes</string>
    <string name="use_home_sensing">Home sensing:</string>
    <string name="allow_cellular">Allow cellular communication:</string>
    <string name="cellular_off">off</string>
    <string name="cellular_on">on</string>
    <string name="num_examples_store_before_send">Num examples to store before send:</string>
    <string name="send_stored_examples">Send stored examples</string>
    <string name="researcher_settings_label">Researcher settings:</string>
    <string name="classifier_type_label">Classifier type:</string>
    <string name="classifier_name_label">Classifier name:</string>
    <string name="classifier_update_button_label">Update classifier type and name</string>
    <string name="classifier_settings_header">Classifier selection:</string>
    <string name="classifier_settings_off">keep</string>
    <string name="classifier_settings_on">edit</string>
    <string name="record_audio_label">Audio</string>
    <string name="should_we_record_label">Sensor-measurements to record:</string>
    <string name="record_location_label">Location</string>
    <string name="record_watch_label">Polar devices (heart rate)</string>
    <string name="high_freq_sensors_label">High frequency (40Hz):</string>
    <string name="low_freq_sensors_label">Low frequency (once per minute):</string>
    <string name="use_notifications">Notifications:</string>
    <string name="notifications_on">on</string>
    <string name="notifications_off">off</string>
    <string name="save_pred_files">Save prediction files:</string>
    <string name="save_pred_files_on">on</string>
    <string name="save_pred_files_off">off</string>
    <string name="dummy_main_activity">Not sure</string>
    <string name="checkbox_use_near_past_notifications">To confirm near-past context</string>
    <string name="checkbox_use_near_future_notifications">To report near-future context</string>
    <string name="save_user_labels_files">Save user-labels files:</string>
    <string name="not_sure_dummy_label">not sure</string>
    <string name="text_basic_time_unit">Time resolution:</string>
    <string name="delete_selected_archives_question">Delete selected archives?</string>
    <string name="prompt_yes">Yes</string>
    <string name="prompt_no">No</string>
    <string name="attached_message">Attached.</string>
    <string name="attached_subject">Conversation Backup Archive</string>
    <string name="share_archive_message">Send Conversation Archive ...</string>
    <string name="prompt_ok">Ok</string>
    <string name="fatal_title">FATAL</string>
    <!-- EULA -->
    <string name="eula_title">EULA</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Refuse</string>
    <string name="start_processing_prompt_message">Start processing conversation backup?</string>
    <!-- Permissions Denied -->
    <string name="perms_title">Permissions</string>
    <string name="perms_required">Permissions Required</string>
    <string name="archive_shared_success">Sent Conversation Archive SUCCESSFULLY</string>
    <string name="archive_shared_fail">Sending Conversation Archive FAILED</string>
    <string name="archive_shared">Sent Conversation Archive</string>
    <string name="progress_message_default">Processing Conversation backup</string>
    <string name="progress_backup_call_records">backing up call records</string>
    <string name="ellipsis">" ... "</string>
    <string name="done">" DONE "</string>
    <string name="retrieving_messages">retrieving messages</string>
    <string name="backing_up_mms_attachments">backing up MMS attachments</string>
    <string name="writing_messages_to_json">writing messages</string>
    <string name="creating_zip_file">writing zip file</string>
    <string name="deleting_call_logs">deleting matching call logs</string>
    <string name="deleting_messages">deleting matching messages</string>
    <string name="completed_processing">Completed Processing Conversation Backup</string>
    <string name="summary">Conversation Backup will backup SMS, MMS and call records into a human-readable zip archive file, with bundled html viewer.</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="exit_app">Done</string>
    <!-- layout files result.xml -->
    <string name="main_result_for_all_numbers">Backup for ALL Numbers?</string>
    <string name="main_result_for_specified_numbers">Numbers to backup</string>
    <string name="main_result_what_to_backup">What to backup?</string>
    <string name="main_result_backup_messages">Messages?</string>
    <string name="main_result_backup_mms_attachments">MMS Attachments?</string>
    <string name="main_result_backup_call_records">Call Records?</string>
    <string name="main_result_options_post_backup_label">Post Backup Options</string>
    <string name="main_result_delete_after_backup">Delete After Backup?</string>
    <string name="main_result_share_archive">Send/Share backup?</string>
    <string name="main_result_random_question">Random Question?</string>
    <string name="main_result_select_contact">Select Contact ...</string>
    <string name="main_result_ellipsis">...</string>
    <string name="run_backup">Run Backup</string>
    <string name="archives">Conversation Archives</string>
    <string name="home">Conversation Backup</string>
    <string name="polar_device">Polar Device</string>
    <string name="select_your_polar_sensor">Select your Polar sensor</string>
    <string name="bpm">BPM</string>
    <string name="min">min</string>
    <string name="avg">avg</string>
    <string name="max">max</string>
    <string name="select_your_polar_device">Select your Polar device</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetoothOff">Your bluetooth interface is down, would you like to turn it on?</string>
    <string name="couldnotconnect">Sorry, Could not connect to the Polar device</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="channels">Channels</string>
    <string name="ok">OK</string>
    <string name="listen_broadcast">Listen broadcast</string>
    <string name="connect_to_device">Connect to %s</string>
    <string name="auto_connect_toggle">Auto connect</string>
    <string name="scan_devices">Scan devices</string>
    <string name="start_ecg_stream">Start ECG Stream</string>
    <string name="start_acc_stream">Start ACC Stream</string>
    <string name="start_gyro_stream">Start GYRO Stream</string>
    <string name="start_mag_stream">Start Magnetometer Stream</string>
    <string name="start_ppg_stream">Start PPG Stream</string>
    <string name="start_ppi_stream">Start PPI Stream</string>
    <string name="enable_sdk_mode">Enable SDK mode</string>
    <string name="list_exercises">list exercises</string>
    <string name="read_exercise">read exercise</string>
    <string name="remove_exercise">remove exercise</string>
    <string name="start_h10_recording">Start H10 recording</string>
    <string name="stop_h10_recording">Stop H10 recording</string>
    <string name="h10_recording_status">H10 recording status</string>
    <string name="set_time">Set time</string>
    <string name="disconnect_from_device">Disconnect from %s</string>
    <string name="listening_broadcast">Listening broadcast</string>
    <string name="scanning_devices">stop device scan</string>
    <string name="stop_ecg_stream">stop ECG Stream</string>
    <string name="stop_acc_stream">Stop ACC Stream</string>
    <string name="stop_gyro_stream">Stop GYRO Stream</string>
    <string name="stop_mag_stream">Stop Magnetometer Stream</string>
    <string name="stop_ppg_stream">Stop PPG Stream</string>
    <string name="stop_ppi_stream">Stop PPI Stream</string>
    <string name="disable_sdk_mode">Disable SDK mode</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="start_questionnaire">Start Questionnaire</string>
    <string name="previous">Previous</string>
    <string name="close_app">Close App</string>
</resources>
